package com.project.vocalmentor.model

data class User (
    val name: String,
    val password: String
)
